# Karst

./: .gitignore  CAPABILITIES.md  README.md  dump.py  index_all.py  mcp-server.yaml  pyproject.toml  scratch.py  scratch_md.py  test_client.py  verify_db.py
scripts/: __init__.py  db_optimizer.py  embedder.py  gate.py  gate_artifacts.py  gate_cli.py  gate_ruff.py  gate_support.py  git-post-commit.py  git-pre-commit.py  git_poller.py  install-hooks.ps1  manage_ui.py  reindexer.py  start.ps1  test.ps1  vuln_scanner.py  watchdog.py
src/: core_settings.py  database.py  database_session.py  db_generation_identity.py  db_graph_repository.py  db_integrity_repository.py  db_migration_conflicts.py  db_migration_steps.py  db_migration_support.py  db_migration_v3.py  db_migrations.py  db_process_repository.py  db_schema.py  db_schema_contract.py  db_schema_v3.py  db_schema_v3_contract.py  db_schema_v3_expectations.py  db_transaction.py  git_logic.py  index.html  index_discovery.py  index_generation_service.py  index_identity.py  index_models.py  index_plan.py  index_repository.py  indexing_service.py  main.py  parser.py  parser_models.py  parser_runtime.py  parser_snapshot.py  parser_symbols.py  process_manager.py  query_cursor.py  query_logic.py  query_models.py  query_service.py  security.py  settings.py  (+10 more)
tests/: database_v2_generation_support.py  database_v3_contract_support.py  frontend_browser_support.py  frontend_dashboard_support.py  main_support.py  test_admin_session_concurrency.py  test_admin_session_security.py  test_core_history_embeddings_boundary.py  test_database.py  (+63 more)
(+54 files in other folders)
